--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^0.24.0",
     "axios-retry": "^3.2.4",
     "source-map-support": "^0.5.19",
-    "ulid": "^2.3.0"
+    "ulid": "^2.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.16.0",
