--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
   deploy-test:
     name: ServerlessScheduler
     runs-on: ubuntu-latest
+    concurrency: ServerlessSchedulerConcurrencyGroup
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
