--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "json-schema-to-ts": "^1.4.1",
     "serverless": "^2.16.0",
     "serverless-iam-roles-per-function": "^3.2.0",
+    "serverless-plugin-log-retention": "^2.0.0",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^8.0.10",
     "ts-node": "^9.0.0",
