--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios-retry": "^3.2.4",
     "source-map-support": "^0.5.19",
     "ulid": "^2.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.16.0",
