--- a/package.json
+++ b/package.json
@@ -3,18 +3,14 @@
   "version": "1.0.0",
   "scripts": {
     "deploy": "sls deploy",
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@middy/core": "^1.5.0",
-    "@middy/http-json-body-parser": "^1.5.0",
     "aws-embedded-metrics": "^2.0.4",
     "axios": "^0.24.0",
     "axios-retry": "^3.2.4",
     "source-map-support": "^0.5.19",
     "ulid": "^2.3.0",
-    "uuid": "^8.3.2",
-    "zlib": "^1.0.5"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.16.0",
