--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "aws-embedded-metrics": "^2.0.4",
     "axios": "^0.24.0",
     "axios-retry": "^3.2.4",
+    "bcrypt": "^5.0.1",
     "source-map-support": "^0.5.19",
     "ulid": "^2.3.0",
     "uuid": "^8.3.2"
