--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.24.0",
     "axios-retry": "^3.2.4",
     "bcrypt": "^5.0.1",
+    "next-auth": "^4.2.1",
     "source-map-support": "^0.5.19",
     "ulid": "^2.3.0",
     "uuid": "^8.3.2"
