--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -21,7 +21,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: us-east-1
       DEV_ACCOUNT_ID: ${{ secrets.DEV_ACCOUNT_ID }}
-      NEXT_AUTH_SECRET: ${{ secrets.DEV_NEXT_AUTH_SECRET }}
+      NEXTAUTH_SECRET: ${{ secrets.DEV_NEXTAUTH_SECRET }}
       CORE_API_KEY: ${{ secrets.DEV_CORE_API_KEY }}
 
     steps:
@@ -48,5 +48,5 @@ jobs:
           service-folder: ${{ env.SERVICE_FOLDER }}
           stage: dev
           aws-account-id: ${{ env.DEV_ACCOUNT_ID }}
-          next-auth-secret: ${{ env.NEXT_AUTH_SECRET }}
+          next-auth-secret: ${{ env.NEXTAUTH_SECRET }}
           core-api-key: ${{ env.CORE_API_KEY }}
