--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_REGION: us-east-1
       PROD_ACCOUNT_ID: ${{ secrets.PROD_ACCOUNT_ID }}
-      NEXT_AUTH_SECRET: ${{ secrets.PROD_NEXT_AUTH_SECRET }}
+      NEXTAUTH_SECRET: ${{ secrets.PROD_NEXTAUTH_SECRET }}
       CORE_API_KEY: ${{ secrets.PROD_CORE_API_KEY }}
 
     steps:
@@ -47,5 +47,5 @@ jobs:
           service-folder: ${{ env.SERVICE_FOLDER }}
           stage: prod
           aws-account-id: ${{ env.PROD_ACCOUNT_ID }}
-          next-auth-secret: ${{ env.NEXT_AUTH_SECRET }}
+          next-auth-secret: ${{ env.NEXTAUTH_SECRET }}
           core-api-key: ${{ env.CORE_API_KEY }}
