--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -48,5 +48,5 @@ jobs:
           service-folder: ${{ env.SERVICE_FOLDER }}
           stage: dev
           aws-account-id: ${{ env.DEV_ACCOUNT_ID }}
-          next-auth-secret: ${{ env.NEXTAUTH_SECRET }}
+          nextauth-secret: ${{ env.NEXTAUTH_SECRET }}
           core-api-key: ${{ env.CORE_API_KEY }}
