--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios-retry": "^3.2.4",
     "bcrypt": "^5.0.1",
     "next-auth": "^4.2.1",
+    "node-match-path": "^0.6.3",
     "source-map-support": "^0.5.19",
     "ulid": "^2.3.0",
     "uuid": "^8.3.2"
