--- a/.github/actions/sls-deploy/action.yml
+++ b/.github/actions/sls-deploy/action.yml
@@ -10,6 +10,12 @@ inputs:
   aws-account-id:
     description: AWS Account Id of target environment
     required: true
+  nextauth-secret:
+    description: Next auth secret used to encode/decode tokens
+    required: true
+  core-api-key:
+    description: API Key of the core api
+    required: true
 
 runs:
   using: 'composite'
@@ -24,4 +30,6 @@ runs:
         export AWS_SESSION_TOKEN=`echo $CREDS | jq -r '.Credentials.SessionToken'`
         export STAGE=${{inputs.stage}}
         export SLS_DEBUG="*"
+        export CORE_API_KEY=${{inputs.core-api-key}}
+        export NEXTAUTH_SECRET=${{inputs.nextauth-secret}}
         npm run deploy -- --conceal
