--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "axios": "^0.24.0",
     "axios-retry": "^3.2.4",
     "bcrypt": "^5.0.1",
-    "next-auth": "^4.2.1",
+    "bcryptjs": "^2.4.3",
+    "next-auth": "4.2.1",
     "node-match-path": "^0.6.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "source-map-support": "^0.5.19",
     "ulid": "^2.3.0",
     "uuid": "^8.3.2"
